--- a/src/components/news/news.module.scss
+++ b/src/components/news/news.module.scss
@@ -218,7 +218,7 @@
     border: none;
 }
 .next-btn{
-    background-color: $backgroundcolor_lite_yellow!important;
+    background-color: $backgroundcolor_yellow!important;
 }
 .prev-btn{
     background-color: $backgroundcolor_brown!important;
