--- a/src/components/DashboardLayout/Dashboard/ContactsReason/ContactsReason.module.scss
+++ b/src/components/DashboardLayout/Dashboard/ContactsReason/ContactsReason.module.scss
@@ -50,7 +50,7 @@ margin: 1rem;
             text-overflow: ellipsis;
             text-wrap: nowrap;
             i{
-                color:$backgroundcolor_lite_black;
+                color:$color_brown;
                 font-size: 0.8em;
             }
         }
@@ -72,7 +72,7 @@ margin: 1rem;
     }
 }
 .next-btn{
-    background-color: $backgroundcolor_lite_yellow!important;
+    background-color: $backgroundcolor_yellow!important;
 }
 .prev-btn{
     background-color: $backgroundcolor_brown!important;
@@ -132,4 +132,8 @@ margin: 1rem;
     width: fit-content;
     margin: 1rem auto;
 
+}
+.btn-submit{
+    color: white;
+    background-color: $color-yellow;
 }
