--- a/src/components/home/header-banner/header-banner.module.scss
+++ b/src/components/home/header-banner/header-banner.module.scss
@@ -2,6 +2,7 @@
 @import '../../shared/color.scss';
 .header-banner {
     height: 100vh;
+    min-height: 43.5rem;
     overflow: hidden;
 }
 .banner-slides .swiper-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic,
@@ -50,8 +51,9 @@
     border-radius: 50%;
     padding: 18px 20px 18px 28px;
     position: relative;
-    width: 32px;
     outline: none;
+    width: fit-content;
+
 }
 
 
@@ -101,9 +103,19 @@
     background-color: white !important;
     box-shadow: 0 2px 10px black;
 }
+.container-box{
+    display: flex;
+    align-items: center;
+    margin: 3rem 0;
+    gap:20px;
+}
+
 @media (max-width: 767px) {
     .header-banner {
         height: calc(100vh - 58px);
+    }
+    .container-box{
+        justify-content: center;
     }
 }
 @media (max-width: 480px) {
@@ -111,12 +123,6 @@
         height: calc(100vh - 58px);
     }
 }
-
-
-
-
-
-
 @media (max-width: 767px) {
     .banner-content > .container {
         height: initial;
@@ -137,10 +143,7 @@
     .play-button i {
         font-size: 25px;
     }
-    .play-button::after, .play-button::before {
-        width: 60px;
-        height: 60px;
-    }
+
     .banner-slides .swiper-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic, .banner-slides .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
         left: 50%;
     }
@@ -153,25 +156,24 @@
         margin-top: initial; 
     }
 }
-
-
 @media (max-width: 480px) {
     .header-banner {
         height: calc(100vh - 58px);
     }
     .banner-content p {
-        font-size: 12px;
+        font-size: 20px;
         text-align: center;
     }
-    .play-button i {
-        font-size: 23px;
-    }
     .play-button::after, .play-button::before {
-        width: 50px;
-        height: 50px;
+        width: 70px;
+        height: 70px;
     }
     .banner-slides .swiper-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic, .banner-slides .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
         bottom: 16px;
+    }
+
+    .img-fluid{
+        width: 80%;
     }
 }
 .btn-yellow{
