--- a/src/components/home/header-slider/header-slider.module.scss
+++ b/src/components/home/header-slider/header-slider.module.scss
@@ -12,7 +12,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            background-color: $backgroundcolor_lite_black;
+            background-color: $color_brown;
             position: absolute;
             top: 0;
             z-index: 1;
