--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../node_modules/bootstrap/dist/css/bootstrap.rtl.min.css';
 @import '../node_modules/swiper/swiper-bundle.css';
+@import './components/shared/color.scss';
 *{
     box-sizing: border-box!important;
-    /* overflow: hidden; */
 }
 body,html{
     overflow-y: auto;
@@ -20,4 +20,11 @@ body,html{
     background-color: inherit;
     color: inherit;
     border-color:inherit
+}
+.text-right{
+    text-align: right;
+}
+::-webkit-scrollbar {
+    display: block;
+    width: 0px;
 }
