--- a/src/components/shared/header/headerComponent.module.scss
+++ b/src/components/shared/header/headerComponent.module.scss
@@ -1,240 +1,235 @@
 @import '../../shared/animation.module.scss';
 @import '../../shared/color.scss';
-.container{
-    width: 100%;
-    margin: 0 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+.container {
+  width: 100%;
+  margin: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 .navigation-header {
-    position: absolute;
-    z-index: 10;
-    width: 100%;
-    background-color: transparent;
-.navbar-nav{
-    *{
-        overflow-x: hidden;
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  background-color: transparent;
+  .navbar-nav {
+    * {
+      overflow-x: hidden;
     }
-}
+  }
 }
 .navbar-sticky .navbar-brand img.no_sticky {
-    display: block;
-    width: 200px;
-    height: 200px;
+  display: block;
+  width: 200px;
+  height: 200px;
 }
 .navbar-sticky.sticky .navbar-brand img.no_sticky {
-    display: none;
+  display: none;
 }
 
 .navbar-brand img {
-    max-height: 100px;
+  max-height: 100px;
 }
 .navbar-brand img.sticky_logo {
-    max-height: 60px;
+  max-height: 60px;
 }
 .navbar-brand img.sticky_logo {
-    display: none;
+  display: none;
 }
-a, a:hover {
-    text-decoration: none;
-    transition: 0.3s;
-
+a,
+a:hover {
+  text-decoration: none;
+  transition: 0.3s;
 }
 a:hover {
-    
-    color: white!important;
+  color: white !important;
 }
 .menu-close {
-    display: none;
+  display: none;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    color: white;
-    font-weight: 600;
-    padding-left: 20px;
-    padding-right: 20px;
-    position: relative;
+  color: white;
+  font-weight: 600;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
 }
-
 
 .navbar-toggler i {
-    color: white;
-    font-size: 28px;
-    transition: 0.5s;
-    
+  color: white;
+  font-size: 28px;
+  transition: 0.5s;
 }
 .navbar-toggler i::before {
-    transition: all 0.5s;
+  transition: all 0.5s;
 }
-.fa-bars-staggered::before, .fa-reorder::before, .fa-stream::before {
-    content: "\f550";
-}
-
-
-
-.navbar-sticky{
-    background-color: transparent!important;
-}
- .navbar-sticky.sticky .navbar-brand img.sticky_logo {
-    display: block;
+.fa-bars-staggered::before,
+.fa-reorder::before,
+.fa-stream::before {
+  content: '\f550';
 }
 
- .navbar-brand img.sticky_logo {
-    max-height: 60px;
+.navbar-sticky {
+  background-color: transparent !important;
+}
+.navbar-sticky.sticky .navbar-brand img.sticky_logo {
+  display: block;
+}
+
+.navbar-brand img.sticky_logo {
+  max-height: 60px;
 }
 .navbar-sticky.sticky {
-    position: fixed;
-    top: 0px;
-    background-color: white!important;
-    box-shadow: 0px 5px 13px 0px $backgroundcolor_brown;
-    left: 0;
+  position: fixed;
+  top: 0px;
+  background-color: white !important;
+  box-shadow: 0px 5px 13px 0px $backgroundcolor_brown;
+  left: 0;
+  width: 100%;
+  z-index: 20;
+  animation: goDown 0.5s ease-in-out forwards;
+}
+
+.navbar-sticky.sticky {
+  .container {
+    align-items: center !important;
+    .navbar-nav {
+      margin: 0 !important;
+    }
+    .header_actions {
+      margin: 0 !important;
+    }
+    .nav-link {
+      color: $color_brown;
+    }
+  }
+}
+@media (min-width: 991.99px) {
+  .navbar-nav .nav-item .nav-link {
+    position: relative;
+  }
+
+  .navbar-nav .nav-item .nav-link:hover::after {
+    position: absolute;
+    content: '';
     width: 100%;
-    z-index: 20;
-    animation: goDown 0.5s ease-in-out forwards;
-}
-
-.navbar-sticky.sticky{
-    .container{
-        align-items: center!important;
-        .navbar-nav{
-            margin: 0!important;
-        }
-        .header_actions{
-            margin: 0!important;
-        }
-        .nav-link{
-            color: $color_brown;
-        }
-    }
-}
-@media (min-width:991.99px){
-
-    .navbar-nav .nav-item .nav-link{
-        position: relative;
-    }
-
-    .navbar-nav .nav-item .nav-link:hover::after{
-        position: absolute;
-        content:"";
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        margin-top: 0.3rem;
-        top:0;
-        left:0;
-        margin: 0;
-        opacity: 1;
-        display: block;
-        background-color: $color_green !important;
-        animation: outborder 1s ease-in-out forwards;
-    }
-    .navbar.bg-body-tertiary.bg-dark.navbar-sticky.sticky .navbar-nav .nav-link{
-        color:black!important;
-    }
+    height: 100%;
+    z-index: -1;
+    margin-top: 0.3rem;
+    top: 0;
+    left: 0;
+    margin: 0;
+    opacity: 1;
+    display: block;
+    background-color: $color_green !important;
+    animation: outborder 1s ease-in-out forwards;
+  }
+  .navbar.bg-body-tertiary.bg-dark.navbar-sticky.sticky .navbar-nav .nav-link {
+    color: black !important;
+  }
 }
 @media (max-width: 1199.98px) {
-
-    .navbar-expand-lg .navbar-nav .nav-link {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 @media (max-width: 991.98px) {
-
-    .navbar-expand-lg .navbar-nav .nav-link {
-        padding: 1rem 2rem;
-
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding: 1rem 2rem;
+  }
+  [dir='rtl'] .mobile-view {
+    left: auto;
+    right: -250px;
+  }
+  .mobile-view.open {
+    right: 0px;
+  }
+  .mobile-view {
+    position: fixed;
+    top: 0;
+    right: 0px;
+    z-index: 9999;
+    background-color: white;
+    padding: 3rem 1rem;
+    padding-top: 1.5rem;
+    height: 100vh;
+    width: 250px;
+    box-shadow: 0 0 10px $color_gray;
+    transition: 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+    .nav-link {
+      color: $color_brown !important;
     }
-    [dir="rtl"] .mobile-view {
-        left: auto;
-        right: -250px;
-    }
-    .mobile-view.open{
-        right: 0px;
-    }
-    .mobile-view {
-        position: fixed;
-        top: 0;
-        right: 0px;
-        z-index: 9999;
-        background-color: white;
-        padding: 3rem 1rem;
-        padding-top: 1.5rem;
-        height: 100vh;
-        width: 250px;
-        box-shadow: 0 0 10px $color_gray;
-        transition: 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-        .nav-link{
-            color: $color_brown!important;
-        }
-    }
-    .menu-close {
-        display: block;
-        position: absolute;
-        left: 10px;
-        top: 15px;
-        z-index: 9;
-        color: $color_green;
-        cursor: pointer;
-
-    }
-    .mobile-logo {
-        display: block !important;
-    }
-    .navbar-expand-lg .navbar-nav {
-        padding-top: 2rem;
-    }
-    .navbar-expand-lg .navbar-nav .nav-item{
-        padding: 0px;
-    }
-    .navbar-expand-lg .navbar-nav .nav-item:not(:last-child) {
-        border-bottom: 1px solid black;
-    }
-    .navbar-expand-lg .navbar-nav .nav-link {
-        padding: 1rem 0;
-    }
-    .navbar-toggler.clicked i::before {
-        content: "\f00d";
-    }
-
-
+  }
+  .menu-close {
+    display: block;
+    position: absolute;
+    left: 10px;
+    top: 15px;
+    z-index: 9;
+    color: $color_green;
+    cursor: pointer;
+  }
+  .mobile-logo {
+    display: block !important;
+  }
+  .navbar-expand-lg .navbar-nav {
+    padding-top: 2rem;
+  }
+  .navbar-expand-lg .navbar-nav .nav-item {
+    padding: 0px;
+  }
+  .navbar-expand-lg .navbar-nav .nav-item:not(:last-child) {
+    border-bottom: 1px solid black;
+  }
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding: 1rem 0;
+  }
+  .navbar-toggler.clicked i::before {
+    content: '\f00d';
+  }
 }
 @media (max-width: 767px) {
-    .banner-content > .container {
-        height: initial;
-    }
-    .banner-content p {
-        font-size: 16px;
-    }
-    .banner-content {
-        text-align: center;
-        top: 0;
-        height: 100%;
-        transform: translate(0);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-    .play-button i {
-        font-size: 25px;
-    }
-    .play-button::after, .play-button::before {
-        width: 60px;
-        height: 60px;
-    }
-    .banner-slides .swiper-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic, .banner-slides .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
-        left: 50%;
-    }
-    .play-button {
-        bottom: initial; 
-        right: initial; 
-        left: initial; 
-        transform: initial; 
-        margin: initial; 
-        margin-top: initial; 
-    }
+  .banner-content > .container {
+    height: initial;
+  }
+  .banner-content p {
+    font-size: 16px;
+  }
+  .banner-content {
+    text-align: center;
+    top: 0;
+    height: 100%;
+    transform: translate(0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .play-button i {
+    font-size: 25px;
+  }
+  .play-button::after,
+  .play-button::before {
+    width: 60px;
+    height: 60px;
+  }
+  .banner-slides
+    .swiper-horizontal
+    > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic,
+  .banner-slides
+    .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+    left: 50%;
+  }
+  .play-button {
+    bottom: initial;
+    right: initial;
+    left: initial;
+    transform: initial;
+    margin: initial;
+    margin-top: initial;
+  }
 }
 
 // @media (max-width: 600px) {
@@ -242,47 +237,61 @@ a:hover {
 //         max-height: 50px;
 //     }
 // }
-@media (max-width: 480px) {
-    .container{
-        flex-direction: column;
-        .navigation-header{
-            text-align: center;
-            img{
-                width: 250px;
-                height: 250px;
-            }
-        }
-        .header_actions{
-            padding: 0 1rem;
-        }
-        .navbar-brand{
-            margin: auto;
-        }
-    }
-    .btn_reg_fav {
-        font-size: 13px!important;
-        margin-left: 0px !important;
+@media (max-width: 440px) {
+    .navbar-sticky .navbar-brand img.no_sticky {
+        width: 165px;
+        height: 165px;
     }
     .navbar-toggler i {
-        font-size: 20px;
+        font-size: 24px;
     }
-    .header-banner {
-        height: calc(100vh - 58px);
+}
+@media (max-width: 400px) {
+  .container {
+    flex-direction: column;
+    .navigation-header {
+      text-align: center;
+      img {
+        width: 250px;
+        height: 250px;
+      }
     }
-    .banner-content p {
-        font-size: 20px;
-        text-align: center;
+    .header_actions {
+      padding: 0 1rem;
     }
-    .play-button i {
-        font-size: 23px;
+    .navbar-brand {
+      margin: auto;
     }
-    .play-button::after, .play-button::before {
-        width: 50px;
-        height: 50px;
-    }
-    .banner-slides .swiper-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic, .banner-slides .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
-        bottom: 16px;
-    }
+  }
+  .btn_reg_fav {
+    font-size: 13px !important;
+    margin-left: 0px !important;
+  }
+  .navbar-toggler i {
+    font-size: 20px;
+  }
+  .header-banner {
+    height: calc(100vh - 58px);
+  }
+  .banner-content p {
+    font-size: 20px;
+    text-align: center;
+  }
+  .play-button i {
+    font-size: 23px;
+  }
+  .play-button::after,
+  .play-button::before {
+    width: 50px;
+    height: 50px;
+  }
+  .banner-slides
+    .swiper-horizontal
+    > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic,
+  .banner-slides
+    .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+    bottom: 16px;
+  }
 }
 
 // @media (max-width: 353.98px) {
