--- a/src/components/shared/header/headerComponent.module.scss
+++ b/src/components/shared/header/headerComponent.module.scss
@@ -2,7 +2,6 @@
 @import '../../shared/color.scss';
 .container {
   width: 100%;
-  margin: 0 1rem;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -20,16 +19,12 @@
 }
 .navbar-sticky .navbar-brand img.no_sticky {
   display: block;
-  width: 200px;
-  height: 200px;
+  width: 100%;
 }
 .navbar-sticky.sticky .navbar-brand img.no_sticky {
   display: none;
 }
 
-.navbar-brand img {
-  max-height: 100px;
-}
 .navbar-brand img.sticky_logo {
   max-height: 60px;
 }
@@ -106,6 +101,11 @@ a:hover {
   }
 }
 @media (min-width: 991.99px) {
+  .navigation-header {
+    img {
+      max-height: 100px;
+    }
+  }
   .navbar-nav .nav-item .nav-link {
     position: relative;
   }
@@ -136,6 +136,11 @@ a:hover {
   }
 }
 @media (max-width: 991.98px) {
+  .navigation-header {
+    img {
+      max-height: 60px;
+    }
+  }
   .navbar-expand-lg .navbar-nav .nav-link {
     padding: 1rem 2rem;
   }
@@ -191,6 +196,11 @@ a:hover {
   }
 }
 @media (max-width: 767px) {
+  .navigation-header {
+    img {
+      max-height: 50px;
+    }
+  }
   .banner-content > .container {
     height: initial;
   }
@@ -230,42 +240,19 @@ a:hover {
     margin: initial;
     margin-top: initial;
   }
+  .btn_reg_fav {
+    font-size: 13px;
+    margin-left: 0px !important;
+
+}
 }
 
-// @media (max-width: 600px) {
-//     .navbar-brand img {
-//         max-height: 50px;
-//     }
-// }
-@media (max-width: 440px) {
-    .navbar-sticky .navbar-brand img.no_sticky {
-        width: 165px;
-        height: 165px;
-    }
-    .navbar-toggler i {
-        font-size: 24px;
-    }
-}
+
 @media (max-width: 400px) {
-  .container {
-    flex-direction: column;
-    .navigation-header {
-      text-align: center;
-      img {
-        width: 250px;
-        height: 250px;
-      }
+  .navigation-header {
+    img {
+      max-height: 30px;
     }
-    .header_actions {
-      padding: 0 1rem;
-    }
-    .navbar-brand {
-      margin: auto;
-    }
-  }
-  .btn_reg_fav {
-    font-size: 13px !important;
-    margin-left: 0px !important;
   }
   .navbar-toggler i {
     font-size: 20px;
@@ -293,9 +280,3 @@ a:hover {
     bottom: 16px;
   }
 }
-
-// @media (max-width: 353.98px) {
-//     .navbar-brand img {
-//         max-height: 30px;
-//     }
-// }
