--- a/src/components/AuthLayout/login/login.scss
+++ b/src/components/AuthLayout/login/login.scss
@@ -19,7 +19,7 @@
 .container-login::after{
     content: '';
     display: block;
-    background-color: $color_brown;
+    background-color: #00000050;
     width: 100%;height: 100%;
     position: absolute;
     z-index: 0;
