--- a/src/components/DashboardLayout/DashboardLayout/dashboard-layout.scss
+++ b/src/components/DashboardLayout/DashboardLayout/dashboard-layout.scss
@@ -47,6 +47,7 @@
         list-style: none;
         margin-top: 0.5rem;
         position: relative;
+        cursor: pointer;
         .sidebar-link {
           display: block;
           padding: 0.7rem 1rem;
@@ -59,6 +60,7 @@
           color: $color_green;
           &:hover {
             background-color: $backgroundcolor_green;
+              color: white!important;
           }
           a {
             text-decoration: none;
