--- a/src/components/works/works.module.scss
+++ b/src/components/works/works.module.scss
@@ -1,84 +1,239 @@
-.sec-title{
-    background-image: url('../../../public/assets/images/News.jpeg');
-    height: 400px;
+@import '../shared/color.scss';
+.sec-title {
+  background-image: url('../../../public/assets/images/News.jpeg');
+  height: 400px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: relative;
+  .text-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%, -50%);
+    color: white;
+    z-index: 2;
+    display: flex !important;
+    &::before {
+      content: '';
+      display: block;
+      border: 3px solid #e3be17;
+      margin-left: 1rem;
+    }
+  }
+  &::after {
+    content: '';
+    display: block;
     width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    position: relative;
-    .text-title{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateY(-50%,-50%);
-        color: white;
-        z-index: 2;
-        display: flex!important;
-        &::before{
-            content: "";
-            display: block;
-            border: 3px solid #e3be17;
-            margin-left: 1rem;
-        }
-    }
-    &::after{
-        content: "";
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        z-index: 1;
-        background-color: rgb(32 53 54 / 74%);
-    }
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    background-color: rgb(32 53 54 / 74%);
+  }
 }
-.sec-projects{
-    position: relative;
+.sec-projects {
+  position: relative;
 }
 
 .filter-projects {
-    margin: 2rem auto;
+  margin: 2rem auto;
 }
 .filter-projects li button:hover {
-    opacity: 1;
-    transform: translateY(-5px) scale(1.05);
+  opacity: 1;
+  transform: translateY(-5px) scale(1.05);
 }
 .filter-projects li button {
-    display: block;
-    text-align: center;
-    background-color: rgb(72, 70, 70);
-    color:#fff!important;
-    padding: 0.5rem 2rem;
-    margin: 5px 16px;
-    font-weight: bold;
-    border-radius: 16px;
-    opacity: 0.8;
+  display: block;
+  text-align: center;
+  background-color: rgb(72, 70, 70);
+  color: #fff !important;
+  padding: 0.5rem 2rem;
+  margin: 5px 16px;
+  font-weight: bold;
+  border-radius: 16px;
+  opacity: 0.8;
 }
 .slash {
-    color: #e3be17;
+  color: #e3be17;
 }
 .filter-projects li button i {
-    display: block;
-    margin-bottom: 5px;
-    font-size: 30px;
+  display: block;
+  margin-bottom: 5px;
+  font-size: 30px;
 }
 .soldout-badge {
-    color: #fff;
-    padding: 5px;
-    border-radius: 3px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    font-size: 14px;
-    font-weight: 500;
-    background-color: #828180;
-    display: inline-block;
-    transform: rotate(317deg);
-    position: absolute;
-    left: -50px;
-    top: 0;
-    width: 180px;
-    text-align: center;
+  color: #fff;
+  padding: 5px;
+  border-radius: 3px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+  font-weight: 500;
+  background-color: #828180;
+  display: inline-block;
+  transform: rotate(317deg);
+  position: absolute;
+  left: -50px;
+  top: 0;
+  width: 180px;
+  text-align: center;
 }
-.projects_footer{
-    width: fit-content;
-    margin: 1rem auto;
+.projects_footer {
+  width: fit-content;
+  margin: 1rem auto;
+}
+.main-work-image {
+  display: block;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  height: 600px;
+  z-index: -1;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  &:after {
+    content: '';
+    background-color: #00000080;
+    display: block;
+    width: 100%;
+    top: 0;
+    height: 100%;
+    position: absolute;
+  }
+}
+.title_inf {
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    div {
+      height: fit-content;
+      width: fit-content;
+      .fa-map-marked-alt {
+        margin: 1rem;
+        font-size: 1.5em;
+      }
+    }
+  }
+  .nav-pills{
+    display: grid;
+    grid-template-columns:repeat(auto-fit, minmax(min(100%, 50ch), 1fr));
+    .nav{
+      width: 100%;
+      button{
+      width: 100%;
 
+        &.nav-link{
+          background-color: transparent;
+          border: none;
+          outline: none;
+          padding: 0.3rem 0.4rem;
+          position: relative;
+          p{
+            margin: 0;
+            padding-inline-start:0.5rem ;
+            text-wrap: nowrap;
+            font-size: clamp(0.5em, 5vw, 1em);
+            text-align: start;
+            color: white;
+            padding: 0.5rem;
+            font-weight: 700;
+          }
+        }
+  
+      }
+      &:nth-of-type(odd){
+        button{
+          background-color: $color_yellow;
+        }
+      }
+      &:nth-of-type(even) {
+        button{
+          background-color: $color_green
+          ;
+        }
+      }
+    }
+  }
+  .tab-content{
+    display:none
+  }
+  .img-project{
+    width: 100%;
+    aspect-ratio: 1/1;
+  }
+.features-list{
+  li{
+    margin: 0.3rem;
+    font-size: clamp(0.5em, 5vw, 1em);
+    img{
+      width: clamp(30px, 5vw, 50px)!important;
+      height: clamp(30px, 5vw, 50px)!important;
+    }
+  }
+}
+.rating{
+  margin-inline:auto;
+  width: fit-content;
+.circular-progress{
+  width: clamp(100px, 50vw, 150px);
+    height:  clamp(100px, 50vw, 150px);
+    text-align: center;
+    border-radius: 50%;
+    background-color:  black;
+    display: grid;
+    place-items: center;
+    position: relative;
+    .progress-value{
+      font-weight: 900;
+      position: relative;
+      font-size: clamp(0.4em,5vw,1em);
+    }
+    &:before{
+      position: absolute;
+      content: "";
+      display: block;
+      width:  clamp(80px, 50vw, 130px);
+      height:clamp(80px, 50vw, 130px);
+      background-color: #fff;
+      border-radius: 50%;
+    }
+}}
+.container-unit{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--grid-min, 35ch)), 1fr));
+  gap: 30px;
+  margin: 2rem 0;
+  .unit-item{
+    overflow: hidden;
+    width: clamp(min(28rem, 100%), 5vw,100%);
+    background-color: rgb(128 128 128 / 10%);
+    box-shadow: 1px 1px 5px 0px #00000047;
+    border-radius: 20px;
+    margin-inline: auto;
+    padding: 0.4rem;
+    *{
+      width: 100%;
+    }
+    p{
+      margin: 0;
+    }
+    h3{
+      color:$color-yellow
+    }
+    img{
+      height: clamp(25rem, 5vw, 20rem);
+    }
+  }
+  .unit-details{
+  display: grid;
+  margin: 1rem 0;
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, var(--grid-min, 15ch)), 1fr));
+  gap: 5px;
+
+  }
 }
