--- a/src/components/DashboardLayout/DashboardLayout/dashboard-layout.scss
+++ b/src/components/DashboardLayout/DashboardLayout/dashboard-layout.scss
@@ -97,6 +97,8 @@
     }
   }
   .dashboard-footer {
+    position: absolute;
+    bottom: 0;
     width: 100%;
     text-align: center;
     color: white;
