update style and routes

--- a/src/components/home/news/newItem.module.scss
+++ b/src/components/home/news/newItem.module.scss
@@ -63,7 +63,7 @@
 }
 
 .post_title{
-    color: $color-yellew !important;
+    color: $color_yellow !important;
     margin-bottom: 0 !important;
     span{
         display: block;
